# plambabricon

./: .gitignore  AGENTS.md  README.md  build-deb.sh  clean.sh  plambabricond.py  plambabricongui.py  plambabricontray.py  pyproject.toml  setup-env.sh
